=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.10.2 ()

=head2 Bug Fixes

=over

=item *

Fixed the rarely-used DISABLE_NAV_LAYER bricolage.conf directive. [Scott]

=back

=head1 VERSION 1.10.1 (2006-03-20)

=head2 New Features

=over

=item *

Added a guide on how to profile Mason templates. See
F<contrib/template_profiling>. [Scott]

=item *

Added ContribType, Destination, and Preference SOAP modules. [Scott]

=item *

When a page finishes loading, the first text or textarea form field now
automatically gets the focus. [David]

=item *

Added upload and download feature to the template interface, so that templates
can optionally be uploaded or downloaded. Suggested by Chris Sutton. [David]

=back

=head2 Improvements

=over

=item *

When a story is previewed, any related media are distributed to the preview
server only if the C<AUTO_PREVIEW_MEDIA> F<bricolage.conf> directive is
disabled or the media documents need to be previewed. [David]

=item *

Added installation defaults for FreeBSD that will be used when the
C<USE_DEFAULTS> environment variable is set to "freebsd" during installation.
[Rod Taylor]

=item *

Added a C<make devclone> option which does the same as C<make clone> but
removes all of the locally previewed files, the F<data/obj> files, staging and
sandboxes. This means a large saving in download size for cloned production
systems. [Paul Orrock]

=item *

Added C<ALLOW_URIS_WITHOUT_CATEGORIES> F<bricolage.conf> directive to allow
URI formats not to include "%{categories}", which is otherwise rquired. Use
this directive with caution since it is not the recommended behaviour. [Paul
Orrock]

=item *

Added a tooltip to show the underlying Bricolage database ID when hovering
over a UUID in a story profile. This feature complements showing the UUID when