@@ -514,14 +514,18 @@ B<Notes:> NONE.
 =cut
 
 sub get_element_id {
-    require Carp && carp(__PACKAGE__  . '::get_element_id is deprecated. '
-         . 'Use get_element_type_id instead');
+    require Carp && Carp::carp(
+        __PACKAGE__  . '::get_element_id is deprecated. '
+        . 'Use get_element_type_id instead'
+    );
     return shift->get_element_type_id;
 }
 
 sub set_element_id {
-    require Carp && carp(__PACKAGE__  . '::set_element_id is deprecated. '
-         . 'Use set_element_type_id instead');
+    require Carp && Carp::carp(
+        __PACKAGE__  . '::set_element_id is deprecated. '
+       . 'Use set_element_type_id instead'
+   );
     return shift->set_element_type_id(@_);
 }
 
@@ -757,11 +761,10 @@ sub get_element_type {
 }
 
 sub get_element {
-    require Carp
-        && carp(
-            __PACKAGE__ . '::get_element is deprecated. ' .
-            'Use get_element_type() instead'
-        );
+    require Carp && Carp::carp(
+        __PACKAGE__ . '::get_element is deprecated. ' .
+        'Use get_element_type() instead'
+    );
     shift->get_element_type(@_);
 }
 
